Name:                gitcache
Version:             0.1.0
Synopsis:            Simple git utility to use and manage clone cache
Description:         
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          vincent@snarc.org
Category:            Tools
Stability:           experimental
Build-Type:          Simple
Homepage:            https://github.com/vincenthz/hs-gitcache
Bug-Reports:         https://github.com/vincenthz/hs-gitcache/issues
Cabal-Version:       >=1.10
extra-source-files:  README.md

source-repository head
  type: git
  location: https://github.com/vincenthz/hs-gitcache

--Library
--  Exposed-modules:   M
--  Other-modules:     O
--  Build-depends:     base >= 4 && < 5
--  ghc-options:       -Wall -fwarn-tabs
--  default-language:  Haskell2010


Executable           gitcache
  Main-Is:           gitcache.hs
  ghc-options:       -Wall -fno-warn-missing-signatures
  Hs-Source-Dirs:    src
  Build-depends:     base >= 4 && < 5
                   , process
                   , filepath
                   , directory
                   , utf8-string
                   , cryptohash
  default-language:  Haskell2010

--Test-Suite test-gitcache
--  type:              exitcode-stdio-1.0
--  hs-source-dirs:    tests
--  Main-is:           Tests.hs
--  Build-Depends:     base >= 3 && < 5
--                   , mtl
--                   , tasty
--                   , tasty-quickcheck2
--                   , tasty-hunit
--                   , gitcache
--  ghc-options:       -Wall -fno-warn-orphans -fno-warn-missing-signatures
--  default-language:  Haskell2010
